--- a/po/ChangeLog
+++ b/po/ChangeLog
@@ -1,3 +1,7 @@
+2009-01-19  Maximilian Schleiss <maximilian@xfce.org>
+
+	* nb_NO.po: Norwegian Bokmal translation update (Terje Uriansrud)
+
 2009-01-18  Maximilian Schleiss <maximilian@xfce.org>
 
 	* es.po: Spanish translation update (Abel Martín)
