Updated Brazilian Portuguese translation.
(Old svn revision: 29281)

--- a/po/ChangeLog
+++ b/po/ChangeLog
@@ -1,3 +1,8 @@
+2009-01-19 Og Maciel <ogmaciel@gnome.org>
+
+	* pt_BR.po: Updated Brazilian Portuguese translation by
+	Henrique P. Machado.
+
 2009-01-19  Maximilian Schleiss <maximilian@xfce.org>
 
 	* nb_NO.po: Norwegian Bokmal translation update (Terje Uriansrud)
